Expose storage unit metadata resources
Expose Proxy-backed storage unit and single table metadata through MCP resources,
search metadata, completion targets, and recovery guidance.

Add contract and Proxy-backed E2E coverage to verify that MCP clients can read
storage unit information from a logical database.